# tigertag

./: BUILD_INSTRUCTIONS.md  README_BUILD.md  build_exe.py  launcher.py  main.py  pyproject.toml  tigertag.spec
metadata/: Juan D'Arienzo.parquet  Osvaldo Pugliese.parquet  Rodolfo Biagi.parquet
metadata/csv_files/: Anibal Troilo.csv  Carlos Di Sarli.csv  Juan D'Arienzo.csv  Miguel Calo.csv  Osvaldo Pugliese.csv  Pedro Laurenz.csv  Ricardo Tanturi.csv  Rodolfo Biagi.csv
metadata/parquet_files/: Anibal Troilo.parquet  Carlos Di Sarli.parquet  Juan D'Arienzo.parquet  Miguel Calo.parquet  Osvaldo Pugliese.parquet  Pedro Laurenz.parquet  Ricardo Tanturi.parquet  Rodolfo Biagi.parquet
src/tigertag/: __init__.py  audio_player.py  config_handler.py  csv_to_parquet.py  gui.py  helper_functions.py  metadata_handler.py  tag_processing.py  tag_updater.py  tigertag_config.json  vdj_updater.py
